attempt to fix how parallax looks on small screen

--- a/source/parallax/parallax.css.scss
+++ b/source/parallax/parallax.css.scss
@@ -8,7 +8,7 @@ $yellow: #ffdc2d;
 body{
 	margin: 0;
 	padding: 0;
-	max-width: 100%;
+	min-width: 1437px;
 	height: 850px;
 }
 
